--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="enter_text">Enter Note</string>
     <string name="enter">Enter</string>
+    <string name="title_activity_edit">EditActivity</string>
+    <string name="save">Save</string>
+    <string name="delete">Delete</string>
+    <string name="cancel">Cancel</string>
 </resources>
